@@ -170,20 +170,22 @@ namespace CDM
 ,   E_CDM_ERROR_READ_DFI_VOXELSIZE          = 1017 ///< DFI VoxelSize 読込みエラー
 ,   E_CDM_ERROR_READ_DFI_HEADINDEX          = 1018 ///< DFI HeadIndex 読込みエラー
 ,   E_CDM_ERROR_READ_DFI_TAILINDEX          = 1019 ///< DFI TailIndex 読込みエラー
-,   E_CDM_ERROR_READ_DFI_NO_SLICE           = 1020 ///< DFI TimeSlice要素なし
-,   E_CDM_ERROR_READ_DFI_STEP               = 1021 ///< DFI Step 読込みエラー
-,   E_CDM_ERROR_READ_DFI_TIME               = 1022 ///< DFI Time 読込みエラー
-,   E_CDM_ERROR_READ_DFI_NO_MINMAX          = 1023 ///< DFI MinMax要素なし
-,   E_CDM_ERROR_READ_DFI_MIN                = 1024 ///< DFI Min 読込みエラー
-,   E_CDM_ERROR_READ_DFI_MAX                = 1025 ///< DFI Max 読込みエラー
-,   E_CDM_ERROR_READ_DFI_DFITYPE            = 1026 ///< DFI DFIType 読込みエラー
-,   E_CDM_ERROR_READ_DFI_FIELDFILENAMEFORMAT= 1027 ///< DFI FieldfilenameFormat 読込みエラー
-,   E_CDM_ERROR_READ_DFI_COORDINATEFILE         = 1028 ///< DFI Coordinate File 読込みエラー
-,   E_CDM_ERROR_READ_DFI_COORDINATEFILETYPE     = 1029 ///< DFI Coordinate File Type 読込みエラー
-,   E_CDM_ERROR_READ_DFI_COORDINATEFILEPRECISION= 1030 ///< DFI Coordinate File Precision 読込みエラー
-,   E_CDM_ERROR_READ_DFI_COORDINATEFILEENDIAN   = 1031 ///< DFI Coordinate File Endian 読込みエラー
-,   E_CDM_ERROR_OPEN_COORDINATEFILE             = 1032 ///< Coordinate File オープンに失敗
-,   E_CDM_ERROR_READ_COORDINATEFILE             = 1033 ///< Coordinate File 読込みエラー
+,   E_CDM_ERROR_READ_DFI_CELLID             = 1020 ///< DFI CellID 読込みエラー
+,   E_CDM_ERROR_READ_DFI_BCFLAGID           = 1021 ///< DFI BCflagID 読込みエラー
+,   E_CDM_ERROR_READ_DFI_NO_SLICE           = 1022 ///< DFI TimeSlice要素なし
+,   E_CDM_ERROR_READ_DFI_STEP               = 1023 ///< DFI Step 読込みエラー
+,   E_CDM_ERROR_READ_DFI_TIME               = 1024 ///< DFI Time 読込みエラー
+,   E_CDM_ERROR_READ_DFI_NO_MINMAX          = 1025 ///< DFI MinMax要素なし
+,   E_CDM_ERROR_READ_DFI_MIN                = 1026 ///< DFI Min 読込みエラー
+,   E_CDM_ERROR_READ_DFI_MAX                = 1027 ///< DFI Max 読込みエラー
+,   E_CDM_ERROR_READ_DFI_DFITYPE            = 1028 ///< DFI DFIType 読込みエラー
+,   E_CDM_ERROR_READ_DFI_FIELDFILENAMEFORMAT= 1029 ///< DFI FieldfilenameFormat 読込みエラー
+,   E_CDM_ERROR_READ_DFI_COORDINATEFILE         = 1030 ///< DFI Coordinate File 読込みエラー
+,   E_CDM_ERROR_READ_DFI_COORDINATEFILETYPE     = 1031 ///< DFI Coordinate File Type 読込みエラー
+,   E_CDM_ERROR_READ_DFI_COORDINATEFILEPRECISION= 1032 ///< DFI Coordinate File Precision 読込みエラー
+,   E_CDM_ERROR_READ_DFI_COORDINATEFILEENDIAN   = 1033 ///< DFI Coordinate File Endian 読込みエラー
+,   E_CDM_ERROR_OPEN_COORDINATEFILE             = 1034 ///< Coordinate File オープンに失敗
+,   E_CDM_ERROR_READ_COORDINATEFILE             = 1035 ///< Coordinate File 読込みエラー
 ,   E_CDM_ERROR_READ_INDEXFILE_OPENERROR    = 1050 ///< Indexファイルオープンエラー
 ,   E_CDM_ERROR_TEXTPARSER                  = 1051 ///< TextParserエラー
 ,   E_CDM_ERROR_READ_FILEINFO               = 1052 ///< FileInfo読込みエラー
